--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/progress": "^0.2.7",
         "@vitejs/plugin-vue": "^3.1.2",
         "pinia": "^2.0.22",
+        "vercel-php": "^0.5.2",
         "vite-plugin-laravel": "^0.2.2",
         "vue": "^3.2.36"
     }
